# MIEIC_CAL_18_19

./: .gitignore  Appointment.cpp  Appointment.h  CMakeLists.txt  Coordinates.cpp  Coordinates.h  Graph.cpp  Graph.h  Heuristics.cpp  Heuristics.h  Makefile  MutablePriorityQueue.h  README.md  README.txt  Schedule.cpp  Schedule.h  TestGraph.cpp  TestGraph.h  TripMate.cpp  TripMate.h  UImain.cpp  UImain.h  Utils.cpp  Utils.h  main.cpp  test.cpp
GraphViewer/: GraphicalInterface.cpp  GraphicalInterface.h  graphviewer.h
stcp_scripts/: codes_to_id.cpp  json_reader.cpp  lines.txt  stcp_routes.cpp
stcp_scripts/output/: stcp_edge_codes.txt  stcp_routes_Porto.txt
stcp_scripts/stcp_lines_info/: 18_0.json  1_0.json  1_1.json  200_0.json  200_1.json  201_0.json  201_1.json  202_0.json  202_1.json  203_0.json  203_1.json  204_0.json  204_1.json  205_0.json  205_1.json  206_0.json  206_1.json  207_0.json  207_1.json  208_0.json  208_1.json  209_0.json  209_1.json  22_0.json  300_0.json  301_0.json  302_0.json  302_1.json  303_0.json  304_0.json  304_1.json  305_0.json  305_1.json  400_0.json  400_1.json  401_0.json  401_1.json  402_0.json  402_1.json  500_0.json  (+71 more)
